--- a/To-Do-Web/todo.html
+++ b/To-Do-Web/todo.html
@@ -15,7 +15,7 @@
 <body>
     <div class="upper-container">
        
-        <header clas="upper-container1">
+        <header clas="upper-container1" class="underline">
             <a href="./todo7.html">
                 <span id="task">
                     Tasks 
