--- a/To-Do-Web/todo.html
+++ b/To-Do-Web/todo.html
@@ -15,8 +15,8 @@
 <body>
     <div class="upper-container">
        
-        <header clas="upper-container1" class="underline">
-            <a href="./todo7.html">
+        <header clas="upper-container1">
+            <a href="./todo7.html" class="underline">
                 <span id="task">
                     Tasks 
                 </span>
